style: Ensure high z-index for header

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -141,6 +141,7 @@
 
   .tlv-header {
     margin: 0 12px;
+    z-index: 99;
   }
 }
 
